# intacct-mcp

./: .env - example  .gitignore  README.md  claude-system-prompt.md  pyproject.toml  simple_mcp_config.json
.github/: FUNDING.yml
docs/rest/: accounts-payable.md  accounts-receivable.md  async-requests.md  bulk-requests.md  cash-management.md  common-resources.md  company-configuration.md  consolidation.md  construction.md  contracts-and-revenue-management.md  document-conversions.md  error-handling.md  expenses.md  fixed-assets-management.md  general-ledger.md  http-headers.md  intacct-report-entity-filter.md  inventory-control.md  order-entry.md  owner-and-owned-objects.md  project-and-resource-management.md  purchasing.md  query-service.md  reports-service.md  reports.md  rest-only-objects.md  tax.md  time.md  txn-volume.md  webhooks.md
docs/xml/: xml-only-objects.md
oauth-callback/: index.html
src/intacct_mcp/: __init__.py  auth.py  client.py  login.py  server.py  xml_gateway.py
