[project]
name = "intacct-mcp"
version = "0.1.0"
description = "FastMCP server for the Sage Intacct REST API"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
intacct-mcp = "intacct_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intacct_mcp"]
